# collective-decision-making-controller

./: CMakeLists.txt  package.xml
config/: config.yaml
launch/: controller.launch.py  geometryOfDecisionMakingWorldThreeTargets.argos  geometryOfDesicionMakingWorld.argos  launch.sh  launch_argos.sh  launch_ros2.sh  launch_ros2_params.sh  world.argos  worldFourTargets.argos  worldThreeTargets.argos
src/: control.cpp  control.h  controller.cpp  controller.h  util.cpp  util.h
